# jmc

./: .clang-format  .gitignore  CMakeLists.txt  board.xlsx
data/: CMakeLists.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  board.cpp  board.h  board8x8.cpp  board8x8.h  board_state.h  cell.h  color.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  fen.cpp  fen.h  game.cpp  game.h  magic_bitboard.cpp  magic_bitboard.h  move.cpp  move.h  move_list.cpp  move_list.h  perft.cpp  perft.h  piece.h  piece_type.h  search.cpp  search.h  square.h  string_utilities.cpp  string_utilities.h  timer.cpp  timer.h
src/old/: board.cpp  board.h  board8x8.cpp  board8x8.h  consts.h  fen.cpp  fen.h  move.cpp  movelist.cpp  movelist.h  types.h
test/: CMakeLists.txt  test_bitboard.cpp  test_board8x8.cpp
tools/console/: CMakeLists.txt  console_game.cpp  console_game.h  main.cpp
tools/console/old/: consolegame.cpp  consolegame.h
tools/gui/: CMakeLists.txt
tools/gui/application/: application.cpp  application.h  gui_game.cpp  gui_game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move_model.cpp  move_model.h
tools/gui/resources/: resources.qrc
tools/gui/view/: boardview.cpp  boardview.h
